<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:gravity="center_vertical"
    android:padding="6dip">

    <TextView
        android:id="@+id/recipe_list_item_title"
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:layout_alignParentRight="true"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="Title"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/recipe_list_item_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="desc"
        android:layout_below="@+id/recipe_list_item_title" />
    <!--<Button-->
        <!--android:id="@+id/detele_recipe"-->
        <!--android:text="X"-->
        <!--android:layout_marginLeft="250sp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->


</RelativeLayout>