<resources>
    <string name="app_name">MobSoftLab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="navigation_drawer_items_array">
        <item>Recipe list</item>
        <!--<item>Recipe detail</item>-->
    </string-array>
</resources>
